mobile alignment fix

--- a/src/Pages/HomePage.css
+++ b/src/Pages/HomePage.css
@@ -266,7 +266,7 @@ button {
         align-items: center;
         align-content: center;
         gap: 10px;
-        margin-top: 0px;
+        margin-top: 30px;
     }
     .introduction-title {
         display: flex;
